tests/spec/emit/snapshots/option_match_on_nullable_call_names_the_value.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  import "go:context"
  import "go:fmt"
  
  fn main() {
    let ctx = context.Background()
    match ctx.Err() {
      Some(err) => fmt.Println(err),
      None => fmt.Println("no error"),
    }
  }
---
package main

import (
	"context"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	ctx := context.Background()
	if err := ctx.Err(); !lisette.IsNilInterface(err) {
		fmt.Println(err)
	} else {
		fmt.Println("no error")
	}
}
