tests/spec/emit/snapshots/option_none_construction.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() -> Option<int> {
    None
  }
---
package main

func test() (int, bool) {
	return 0, false
}
