tests/spec/emit/snapshots/option_of_option.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() -> Option<Option<int>> {
    Some(Some(42))
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() (lisette.Option[int], bool) {
	return lisette.MakeOptionSome(42), true
}
