tests/spec/emit/snapshots/option_of_result.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() -> Option<Result<int, string>> {
    Some(Ok(42))
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() (lisette.Result[int, string], bool) {
	return lisette.MakeResultOk[int, string](42), true
}
