tests/spec/emit/snapshots/option_of_slice.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() -> Option<Slice<int>> {
    Some([1, 2, 3])
  }
---
package main

func test() ([]int, bool) {
	return []int{1, 2, 3}, true
}
