tests/spec/emit/snapshots/option_ref_lowers_to_bare_nilable_pointer_in_interface_impl.snap
---
source: tests/spec/emit/go_interface_adapter.rs
description: |
  
  import "go:example.com/store"
  
  struct Store {}
  
  impl Store {
    fn Find(self, key: string) -> Option<Ref<store.Entry>> {
      None
    }
  }
  
  fn use_store(s: store.Storage) {
    let _ = s
  }
  
  fn main() {
    let s = Store {}
    use_store(s as store.Storage)
  }
---
package main

import "example.com/store"

type Store struct{}

func (s Store) Find(_ string) *store.Entry {
	return nil
}

func useStore(s store.Storage) {
	_ = s
}

func main() {
	s := Store{}
	useStore(s)
}
