tests/spec/emit/snapshots/option_some_construction.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() -> Option<int> {
    Some(42)
  }
---
package main

func test() (int, bool) {
	return 42, true
}
