tests/spec/emit/snapshots/option_some_types_a_constant_builtin_result.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn test() -> Option<float64> {
    let widened: Option<float64> = Some(min(1, 2))
    widened
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() (float64, bool) {
	widened := lisette.MakeOptionSome(float64(min(1, 2)))
	if widened.Tag == lisette.OptionSome {
		return widened.SomeVal, true
	}
	return 0.0, false
}
